레이아웃완성

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,135 @@
 * {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  box-sizing: border-box; }
 
 ul, ol {
   list-style: none; }
 
 a {
   text-decoration: none; }
+
+main {
+  width: 100%;
+  height: 100vh;
+  background: #333;
+  overflow: hidden;
+  display: flex; }
+
+#header {
+  width: 20%;
+  height: 100%;
+  padding: 5vw 7vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-between;
+  position: relative;
+  z-index: 3; }
+  #header h1 {
+    font: 14px/1 'arial';
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+    #header h1 i {
+      font-size: 90px;
+      margin-bottom: 40px; }
+  #header address {
+    font: 11px/1.2 'arial';
+    color: #888; }
+
+#nav {
+  position: absolute;
+  top: 5vw;
+  right: 7vw; }
+  #nav ul {
+    display: flex; }
+    #nav ul li a {
+      color: #bbb;
+      font-size: 18px;
+      margin-left: 1.5vw; }
+
+#section {
+  width: 80%;
+  display: flex;
+  padding-top: 7vw; }
+  #section article {
+    padding: 7vw 2vw;
+    flex: 1;
+    opacity: 0.8;
+    z-index: 1;
+    transition: 1s;
+    position: relative; }
+    #section article::before {
+      content: '';
+      display: block;
+      width: 80%;
+      height: 90%;
+      background: #444;
+      position: absolute;
+      top: 0;
+      left: -200px;
+      opacity: 0;
+      transition: 1.5s; }
+    #section article:hover {
+      padding-top: 6vw;
+      opacity: 1;
+      z-index: 2;
+      flex: 1.5; }
+      #section article:hover::before {
+        opacity: 1;
+        left: 0; }
+      #section article:hover .inner .txt h2 {
+        color: #ddd;
+        font-size: 50px; }
+        #section article:hover .inner .txt h2::after {
+          width: 100px;
+          background: orange; }
+      #section article:hover .inner .txt p {
+        width: 90%; }
+      #section article:hover .inner .pic {
+        height: 200px;
+        filter: saturate(120%);
+        transform: translateY(15px); }
+    #section article .inner {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-content: space-between;
+      position: relative;
+      cursor: pointer; }
+      #section article .inner .txt h2 {
+        font: 28px/1 'arial';
+        color: #999;
+        letter-spacing: 1px;
+        margin-bottom: 70px;
+        position: relative;
+        transition: 1s; }
+        #section article .inner .txt h2::after {
+          content: '';
+          display: block;
+          width: 40px;
+          height: 2px;
+          background: #666;
+          position: absolute;
+          left: 0;
+          bottom: -20px;
+          transition: 1s; }
+      #section article .inner .txt p {
+        font: 15px/1.2 'arial';
+        color: #777;
+        position: relative; }
+      #section article .inner .pic {
+        width: 100%;
+        height: 150px;
+        filter: saturate(10%);
+        transition: 1s;
+        transform-origin: left bottom; }
+        #section article .inner .pic video {
+          width: 100%;
+          height: 100%;
+          object-fit: cover; }
 
 /*# sourceMappingURL=style.css.map */
