--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ main {
   height: 100vh;
   background: #333;
   overflow: hidden;
+  position: relative;
   display: flex; }
 
 #header {
@@ -42,7 +43,8 @@ main {
 #nav {
   position: absolute;
   top: 5vw;
-  right: 7vw; }
+  right: 7vw;
+  z-index: 3; }
   #nav ul {
     display: flex; }
     #nav ul li a {
@@ -131,5 +133,41 @@ main {
           width: 100%;
           height: 100%;
           object-fit: cover; }
+
+#aside {
+  position: absolute;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  padding: 10vw 10vw 7vw 20vw;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  transition: 1s;
+  opacity: 0; }
+  #aside.on {
+    left: 0;
+    opacity: 1; }
+  #aside .txt {
+    width: 30%; }
+    #aside .txt h1 {
+      font: 70px/2 'arial';
+      color: #eee;
+      letter-spacing: 1px;
+      margin-bottom: 20px; }
+    #aside .txt p {
+      font: 20px/1.4 'arial';
+      color: #666;
+      margin-bottom: 50px; }
+    #aside .txt .btn {
+      font: 16px/1 'arial';
+      color: orange; }
+  #aside .pic {
+    width: 70%; }
+    #aside .pic video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
 
 /*# sourceMappingURL=style.css.map */
