--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ main{
     height: 100vh;
     background: #333;
     overflow: hidden;
+    position: relative;
     display: flex;
 }
 
@@ -42,6 +43,7 @@ main{
     position: absolute;
     top: 5vw;
     right: 7vw;
+    z-index: 3;
 
     ul{
         display: flex;
@@ -160,6 +162,53 @@ main{
                     object-fit: cover;
                 }
             }
+        }
+    }
+}
+
+#aside{
+    position: absolute;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    padding: 10vw 10vw 7vw 20vw;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    transition: 1s;
+    opacity: 0;
+
+    &.on{
+        left: 0;
+        opacity: 1;
+    }
+    .txt{
+        width: 30%;
+
+        h1{
+            font: 70px/2 'arial';
+            color: #eee;
+            letter-spacing: 1px;
+            margin-bottom: 20px;
+        }
+        p{
+            font: 20px/1.4 'arial';
+            color: #666;
+            margin-bottom: 50px;
+        }
+        .btn{
+            font: 16px/1 'arial';
+            color: orange;
+        }
+    }
+    .pic{
+        width: 70%;
+
+        video{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 }
